Rename build step

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -25,10 +25,7 @@ jobs:
           python --version
           poetry --version
 
-      #----------------------------------------------
-      # install your root project, if required
-      #----------------------------------------------
-      - name: Install project
+      - name: Install dependencies and run tests
         run: |
           poetry config cache-dir /root/.cache/pypoetry
           bash -c "make test"
