--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pydantic = "^2.11.10"
-pydantic-settings = "^2.0.3"
-pyaml = "^25.7.0"
-pytest = "8.4.2"
-fastapi = {extras = ["standard"], version = "^0.121.0"}
+pydantic = "2.12.5"
+pydantic-settings = "2.12.0"
+pyaml = "25.7.0"
+fastapi = {extras = ["standard"], version = "0.124.0"}
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.2.1"
-testcontainers = "^4.4.1"
-pytest-asyncio = "^1.2.0"
+pytest = "9.0.2"
+testcontainers = "4.13.3"
+pytest-asyncio = "1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
