--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "2.12.5"
 pydantic-settings = "2.12.0"
 pyaml = "25.7.0"
 fastapi = {extras = ["standard"], version = "0.124.0"}
+prometheus-client = "0.23.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "9.0.2"
