add main frontend sections

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "urbalytix-webapp",
+    "name": "msu-manager-webapp",
     "version": "0.1.0",
     "license": "AGPLv3",
     "private": true,
@@ -11,10 +11,11 @@
         "@deck.gl/layers": "9.2.2",
         "@deck.gl/react": "9.2.2",
         "@deck.gl/widgets": "^9.2.2",
-        "@emotion/react": "11.14.0",
-        "@emotion/styled": "11.14.1",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "7.3.5",
-        "@mui/material": "7.3.5",
+        "@mui/lab": "^7.0.1-beta.20",
+        "@mui/material": "^7.3.5",
         "@mui/x-data-grid": "8.18.0",
         "@mui/x-date-pickers": "8.18.0",
         "@mui/x-tree-view": "8.18.0",
