--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -13,6 +13,13 @@ uplink_monitor:
   check_connection_target: '1.1.1.1'                                                # Target to ping for connection checks
   check_connection_device: 'wwan0'                                                  # Device to use for connection checks (should mostly be the same as wwan_device, null/unset means any uplink will do)
   check_interval_s: 10
+gps:
+  enabled: true
+  measurement_rate_ms: 1000
+  measurement_rate_set_cmd: ['true']
+  gpsd_host: localhost
+  gpsd_port: 2947
+    
 frontend:
   enabled: true
   path: dist
