Switch HCU listener from UDP socket to serial communication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pyaml = "25.7.0"
 fastapi = {extras = ["standard"], version = "0.128.0"}
 prometheus-client = "0.23.1"
 gpsd-client-async = "2.0.0"
+pyserial-asyncio = "0.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "9.0.2"
