Fix missing ping binary in build

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install dependencies and run tests
         run: |
+          sudo apt update && sudo apt install -y iputils-ping
           poetry config cache-dir /root/.cache/pypoetry
           bash -c "make test"
 
